// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders kategorie filters 1`] = `
<div
  className="PoradiFilters"
>
  <input
    className="TextFilter__input"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Filtr na příjmení a jméno"
    type="text"
    value=""
  />
  <div
    className="PoradiFilters__kategorie btn-group"
  >
    <span
      className="KategorieFilter Bootstrap-buttons--active"
    >
      <button
        className="KategorieFilter--maraton--active btn btn-default active"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          style={
            Object {
              "fontSize": "100%",
            }
          }
        >
          <img
            alt="maraton"
            height={30}
            src="maraton.png"
            title="maraton"
          />
           
          maraton
        </span>
      </button>
    </span>
    <span
      className="KategorieFilter Bootstrap-buttons--active"
    >
      <button
        className="KategorieFilter--cyklo--inactive btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          style={
            Object {
              "fontSize": "100%",
            }
          }
        >
          <img
            alt="cyklo"
            height={30}
            src="cyklo.png"
            title="cyklo"
          />
           
          cyklo
        </span>
      </button>
    </span>
  </div>
  <span
    className="Zobrazeno"
  >
    zobrazeno: 
    <span
      className="badge"
    >
      10
    </span>
  </span>
</div>
`;

exports[`renders kategorie subFilters 1`] = `
<div
  className="PoradiFilters"
>
  <input
    className="TextFilter__input"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Filtr na příjmení a jméno"
    type="text"
    value=""
  />
  <div
    className="PoradiFilters__kategorie btn-group"
  >
    <span
      className="KategorieFilter Bootstrap-buttons--active"
    >
      <button
        className="KategorieFilter--maraton--active btn btn-default active"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          style={
            Object {
              "fontSize": "100%",
            }
          }
        >
          <img
            alt="maraton"
            height={30}
            src="maraton.png"
            title="maraton"
          />
           
          maraton
        </span>
      </button>
    </span>
  </div>
  <div
    className="PoradiFilters__sub-kategorie"
  >
    <span
      className="KategorieSubFilter Bootstrap-buttons--active"
    >
      <button
        className="KategorieSubFilter--maraton--active btn btn-default active"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          style={
            Object {
              "fontSize": "85%",
            }
          }
        >
           (1M)
        </span>
      </button>
    </span>
    <span
      className="KategorieSubFilter Bootstrap-buttons--active"
    >
      <button
        className="KategorieSubFilter--maraton--inactive btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          style={
            Object {
              "fontSize": "85%",
            }
          }
        >
           (2M)
        </span>
      </button>
    </span>
    <span
      className="KategorieSubFilter Bootstrap-buttons--active"
    >
      <button
        className="KategorieSubFilter--maraton--inactive btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          style={
            Object {
              "fontSize": "85%",
            }
          }
        >
           (3M)
        </span>
      </button>
    </span>
  </div>
  <span
    className="Zobrazeno"
  >
    zobrazeno: 
    <span
      className="badge"
    >
      2
    </span>
  </span>
</div>
`;
